--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.0.0",
     "lowdb": "0.13",
     "redis": "^2.6.3",
+    "request": "^2.81.0",
     "uuid": "^1.0.0",
     "validator": "^6.0.0"
   },
