--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git://github.com/sturadnidge/cf-demo-node.git"
   },
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.0.0",
