--- a/manifest-v1.yml
+++ b/manifest-v1.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: cf-demo-node-green
+- name: cf-demo-node-v1
   memory: 128M
   instances: 1
   random-route: true
@@ -8,4 +8,4 @@ applications:
   env:
     NODE_ENV: dev
     REDIS_SERVICE_NAME: none
-    COLOUR: 22a387
+    COLOUR: 227fa3
