--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.0.0",
+    "debug":"^2.6.8",
     "express": "^4.0.0",
     "is-cf": "^1.1.0",
     "jsonwebtoken": "^7.0.0",
